[project]
name = "custom-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.31",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["E501", "N", "R", "I", "C901", "PD", "NPY", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
